--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="room_header_right">
     <%= link_to edit_room_path(params[:id]) do %>
-      <i class="fa-solid fa-caret-down">編集</i>
+      <i class="fa-solid fa-caret-down"></i>
     <% end %>
 
   </div>
@@ -43,11 +43,12 @@
     <% end %>
   <% end %>
 </div>
+<div id="dummy-margin" class="dummy-margin"></div>
 
 <%= form_with url: create_message_path(params[:id]), model: @message, local: true do |f| %>
   <div class="message-form" >
     <div class="message-textarea">
-      <div class="dummy-textarea" aria-hidden="true"></div>
+      <div id="dummy-textarea" class="dummy-textarea" aria-hidden="true"></div>
       <%= f.text_area :sentence, id: "message-sentence", class: "message-sentense-class", :placeholder => "メッセージを送信する" %>
     </div>
     <%= f.submit "送信" , id: "message-submit", class: "message-submit" %>
