--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -128,6 +128,7 @@
     font-size: 15px;
     padding: 15px 10px 15px 10px;
     margin-bottom: 10px;
+    word-break: break-all;
     .message-left{
       img{
         width: 35px;
