--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="rooms">
-  <th><%= sort_link(@q, :created_at, "作成日") %></th>
+  <th><%= sort_link(@q, :created_at, "作成日", hide_indicator: true) %></th>
   <% @results.each do |room| %>
     <%= link_to room_page_path(room.id) do %>
       <div class="room"> 
