--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -42,6 +42,7 @@
       </div>
     <% end %>
   <% end %>
+  <%= render "message_pagenation", model: @mess %>
 </div>
 <div id="dummy-margin" class="dummy-margin"></div>
 
