--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -71,9 +71,14 @@
     } else {
       button.disabled = true;
     };
+
     if (count1 >= textCount){
       button.disabled = true;
+      $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(234, 57, 33, 0.3');
+    } else {
+      $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(35, 167, 195, 0.3');
     };
+
   });
 </script>
 </div>
