--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -54,7 +54,7 @@
       <div class="dummy-textarea" aria-hidden="true"></div>
       <%= f.text_area :sentence, id: "message-sentence", class: "message-sentense-class", :placeholder => "メッセージを送信する" %>
     </div>
-    <%= f.submit "送信" , id: "message-submit", class: "message-submit" %>
+    <input type="submit" name="commit" value="" id="message-submit" class="message-submit">
     <p id="helper-text" style="color: red;"></p>
   </div>
 <% end %>
