--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,5 +1,7 @@
 <div class="search-area">
   <%= search_form_for @q, url: room_search_path do |f| %>
+    <%= f.label :category_eq, 'カテゴリー', class: 'label' %>
+    <%= f.collection_select :category_eq, @category_sel, :category, :category, include_blank: '指定なし', class: 'search-select' %>
     <%= f.search_field :name_cont, placeholder: "キーワードを入力してルームを検索"  %>
     <% f.submit '検索' %>
   <% end %>
