--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,6 +1,6 @@
 <div class="search-area">
   <%= search_form_for @q, url: room_search_path do |f| %>
-    <%= f.search_field :name_cont, placeholder: "キーワードを入力してルームを検索"  %>
+    <%= f.search_field :name_cont, placeholder: "キーワードを入力してルームを検索", required: true  %>
     <% f.submit '検索' %>
   <% end %>
 </div>
