--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -68,12 +68,21 @@
   }
 }
 
+.room-header-list{
+  position: fixed;
+  top:0;
+  left: 202px;
+  width: 100%;
+  #message-notice{
+    width: 100%;
+    background-color: #10bc8a;
+    color:#fff;
+    font-size: 14px;
+  }
+}
 .room-header{
   display: flex;
   align-items: flex-start;
-  position: fixed;
-  top:0;
-  left: 200px;
   width: 100%;
   padding: 0.2%;
   z-index: 0;
