--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,4 +1,13 @@
 <br>
+<% if @current_user %>
+  <%= link_to "ログアウト", destroy_session_path, data: {turbo_method: :post} %>
+  <%= @current_user.name %>
+  <%= @current_user.email %>
+  <img src=<%= @current_user.image %>>
+<% else %>
+  <%= link_to "ログインする", "/signin" %>
+<% end %>
+
 <% @rooms.each do |room| %>
   <%= room.name %>
   <br>
