--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@ body{
       margin-bottom: 10px;
       display: inline-block;
       padding: 7px 10px;
+      width:88%;
     }
     .menu-one:hover{
       background-color: #F4F4F4;
