--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -30,7 +30,24 @@
           <%= link_to "/", class: "menu-one" do %><i class="fa-solid fa-house"></i> トップ<% end %>
           <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-comment"></i> 参加中のルーム<% end %>
           <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-magnifying-glass"></i> ルームを探す<% end %>
-          <%= link_to new_room_path, class: "menu-one" do %><i class="fa-solid fa-plus"></i> ルームを作成<% end %>
+
+          <div class="menu-one" id="open-modal" name="open-modal-btn"><i class="fa-solid fa-plus"></i> ルームを作成</div>
+
+            <div id="demo-modal" class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <span class='close'>X</span>
+                  <h2>新規作成</h2>
+                </div>
+                <div class="modal-body">
+                  <h3>内容</h3>
+                </div>
+                <div class="modal-footer">
+                  <h3>Modal Footer</h3>
+                </div>
+              </div>
+            </div>
+
           <%= link_to setting_path, class: "menu-one" do %><i class="fa-solid fa-gear"></i> 設定<% end %>
         </div>
       </div>
