--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -100,4 +100,12 @@ $(window).on('scroll', function (){
 
 });
 </script>
+
+<script type="text/javascript">
+function (){
+  var elm = getElementById('message-notice');
+  var elm = elm.scrollHeight - elm.clientHeight;
+  window.scrollTo(0, document.body.scrollHeight);
+}
+</script>
 </div>
