--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -78,6 +78,8 @@
     background-color: #10bc8a;
     color:#fff;
     font-size: 14px;
+    cursor: pointer;
+    cursor: hand;
   }
 }
 .room-header{
