--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -41,6 +41,17 @@
                 </div>
                 <div class="modal-body">
                   <h3>内容</h3>
+                  カテゴリ<input type="text">
+                  <br>
+                  ルーム名<input type="text">
+                  <br>
+                  ルームアイコン<input type="file">
+                  <br>
+                  ルーム詳細情報
+                  <br>
+                  <textarea></textarea>
+                  <br>
+                  <input type="submit">
                 </div>
                 <div class="modal-footer">
                   <h3>Modal Footer</h3>
