--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -40,18 +40,12 @@
                   <h2>新規作成</h2>
                 </div>
                 <div class="modal-body">
-                  <h3>内容</h3>
-                  カテゴリ<input type="text">
-                  <br>
-                  ルーム名<input type="text">
-                  <br>
-                  ルームアイコン<input type="file">
-                  <br>
-                  ルーム詳細情報
-                  <br>
-                  <textarea></textarea>
-                  <br>
-                  <input type="submit">
+                    <div class="create-from">カテゴリ<input type="text"></div>
+                    <div class="create-from">ルーム名<input type="text"></div>
+                    <div class="create-from">ルームアイコン<input type="file"></div>
+                    <div class="create-from">ルーム詳細情報<br>
+                    <textarea></textarea></div>
+                    <input type="submit">
                 </div>
                 <div class="modal-footer">
                   <h3>Modal Footer</h3>
