--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
                     <div class="create-from">カテゴリ<input type="text"></div>
                     <div class="create-from">ルーム名<input type="text"></div>
                     <div class="create-from">ルームアイコン<input type="file"></div>
-                    <div class="create-from">ルーム詳細情報<br>
-                    <textarea></textarea></div>
+                    ルーム詳細情報<div class="create-from">
+                    <textarea class="modal-textarea"></textarea></div>
                     <input type="submit">
                 </div>
                 <div class="modal-footer">
