--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -40,15 +40,12 @@
                   <h2>新規作成</h2>
                 </div>
                 <div class="modal-body">
-                    <div class="create-from">カテゴリ<input type="text"></div>
-                    <div class="create-from">ルーム名<input type="text"></div>
-                    <div class="create-from">ルームアイコン<input type="file"></div>
+                    カテゴリ<div class="create-from"><input type="text"></div>
+                    ルーム名<div class="create-from"><input type="text"></div>
+                    ルームアイコン<div class="create-from"><input type="file"></div>
                     ルーム詳細情報<div class="create-from">
                     <textarea class="modal-textarea"></textarea></div>
                     <input type="submit">
-                </div>
-                <div class="modal-footer">
-                  <h3>Modal Footer</h3>
                 </div>
               </div>
             </div>
