--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <div id="demo-modal" class="modal">
               <div class="modal-content">
                 <div class="modal-header">
-                  <span class='close'>X</span>
+                  <span class='close'><i class="fa-solid fa-circle-xmark"></i></span>
                   <h2>新規作成</h2>
                 </div>
                 <div class="modal-body">
