--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
         </div>
         <div class="menu">
           <%= link_to "/", class: "menu-one" do %><i class="fa-solid fa-house"></i> トップ<% end %>
-          <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-comment"></i> 参加中のルーム<% end %>
+          <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-comment"></i> ルーム一覧<% end %>
+          <%= link_to "/room/joined", class: "menu-one" do %><i class="fa-solid fa-comment"></i> 参加中のルーム<% end %>
           <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-magnifying-glass"></i> ルームを探す<% end %>
           <%= link_to new_room_path, class: "menu-one" do %><i class="fa-solid fa-plus"></i> ルームを作成<% end %>
           <%= link_to setting_path, class: "menu-one" do %><i class="fa-solid fa-gear"></i> 設定<% end %>
