--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -8,24 +8,26 @@
 <div class="rooms">
   <th><%= sort_link(@q, :created_at, "作成日", hide_indicator: true) %></th>
   <% @results.each do |room| %>
-    <% if UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
-        <div class="room"> 
-            <div class="room-image">
-              <% if room.image.length > 0 %>
-                <img src = "<%= room.image %>" class="room-image">
-              <% else %>
-                <img src = "/room_image/default.png" class="room-image">
-              <% end %>
+    <%= link_to room_page_path(room.id), "data-turbolinks": false do %>
+        <% if UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+            <div class="room"> 
+                <div class="room-image">
+                <% if room.image.length > 0 %>
+                    <img src = "<%= room.image %>" class="room-image">
+                <% else %>
+                    <img src = "/room_image/default.png" class="room-image">
+                <% end %>
+                </div>
+                <%= room.name %>
+                <% if room.created_at >= Date.today.beginning_of_day %>
+                今日<%= room.created_at.strftime("%H:%M") %>
+                <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
+                昨日<%= room.created_at.strftime("%H:%M") %>
+                <% else %>
+                <%= room.created_at.strftime("%Y/%m/%d") %>
+                <% end %>
             </div>
-            <%= room.name %>
-            <% if room.created_at >= Date.today.beginning_of_day %>
-              今日<%= room.created_at.strftime("%H:%M") %>
-            <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
-              昨日<%= room.created_at.strftime("%H:%M") %>
-            <% else %>
-              <%= room.created_at.strftime("%Y/%m/%d") %>
-            <% end %>
-        </div>
+        <% end %>
     <% end %>
   <% end %>
 </div>
