--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -333,61 +333,58 @@
   outline: 0;
 }
 
-.modal-menu {
-  display: none;
+.modal-detail {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 99999;
-  animation-name: show;
-  animation-duration: 0.5s
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: .6s;
 }
 
-.modal-content-menu {
-  position: relative;
-  background-color: rgb(105, 209, 105);
-  margin: 10% auto;
-  border: 10px solid rgb(105, 209, 105);
-  border-radius: 10px;
-  width: 39%;
-  font-size: 1.25rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-.modal-header-menu {
-  padding: 12px;
-  background-color: rgb(105, 209, 105);
-  border-radius:10px 10px 0px 0px;
-  color: white;
-  .close-menu {
-    color: rgb(195, 4, 4);
-    float: right;
-    font-size: 16px;
-  }
+.modal-detail.is-show {
+  opacity: 1;
+  visibility: visible;
 }
 
-.modal-body-menu {
-  background-color: #ffffff;
-  border-radius:0px 0px 10px 10px;
-  padding: 12px;
-  .create-from2{
-    flex-flow: column;
-    border-bottom:2px solid #7a7a7a;
-    input[type="text"]{
-      width: 99%;
-      height: 30px;
-      margin-bottom: 4px;
-    }
-    input[type="file"] {
-      margin-bottom: 6px;
-    }
-    .modal-textarea2{
-      width: 100%;
-    }
-    .input[type="submit"]{
-    }
-  }
+.modal-detail-inner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 80%;
+  max-width: 600px;
+  padding: 50px;
+  background-color: #fff;
+  z-index: 2;
+}
+.modal-inner-content{
+  font-size: 25px;
+}
+.close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+}
+.close-btn i {
+  font-size: 20px;
+  color: #333;
+}
+.background-shadow {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.8);
+  z-index: 1;
+  cursor: pointer;
 }
