--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,19 +1,11 @@
-<div id="demo-modal-menu" class="modal-menu">
-  <div class="modal-content-menu">
-    <div class="modal-header-menu">
-      <span class='close-menu'><i class="fa-solid fa-circle-xmark"></i></span>
-      <h2>新規作成</h2>
-    </div>
-    <div class="modal-body-menu">
-        カテゴリ<div class="create-from2"><input type="text"></div>
-        ルーム名<div class="create-from2"><input type="text"></div>
-        ルームアイコン<div class="create-from2"><input type="file"></div>
-        ルーム詳細情報<div class="create-from2">
-        <textarea class="modal-textarea2"></textarea></div>
-        <input type="submit">
-    </div>
+<div class="modal-detail" id="js-modal-detail">
+  <div class="modal-detail-inner">
+    <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
+    <div class="modal-inner-content">ああああああああああああああ</div>
   </div>
+  <div class="background-shadow" id="js-black-sh"></div>
 </div>
+
 <div class="room-header-list">
   <div class="room-header">
     <div class="room_header_left">
@@ -21,11 +13,8 @@
       <div class="room_title"><%= @room.name %></div>
     </div>
     <div class="room_header_right">
-      <i class="fa-solid fa-caret-down"></i>
+      <i id="js-show-modal-detail" class="fa-solid fa-caret-down"></i>
     </div>
-
-    <div id="open-modal-2" name="open-modal-btn-2"><i class="fa-solid fa-plus"></i> ルームを作成</div>
-
   </div>
 <div id="message-notice"></div>
 </div>
