--- a/chatapp/app/views/room/search.html.erb
+++ b/chatapp/app/views/room/search.html.erb
@@ -22,23 +22,25 @@
         </div>
 
     <% else #joined rooms %>
-        <div class="room"> 
-            <div class="room-image">
-              <% if room.image.length > 0 %>
-                <img src = "<%= room.image %>" class="room-image">
-              <% else %>
-                <img src = "/room_image/default.png" class="room-image">
-              <% end %>
+        <%= link_to room_page_path(room.id) do %>
+            <div class="room"> 
+                <div class="room-image">
+                <% if room.image.length > 0 %>
+                    <img src = "<%= room.image %>" class="room-image">
+                <% else %>
+                    <img src = "/room_image/default.png" class="room-image">
+                <% end %>
+                </div>
+                <%= room.name %>
+                <% if room.created_at >= Date.today.beginning_of_day %>
+                今日<%= room.created_at.strftime("%H:%M") %>
+                <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
+                昨日<%= room.created_at.strftime("%H:%M") %>
+                <% else %>
+                <%= room.created_at.strftime("%Y/%m/%d") %>
+                <% end %>
             </div>
-            <%= link_to room.name, room_page_path(room.id) %>
-            <% if room.created_at >= Date.today.beginning_of_day %>
-              今日<%= room.created_at.strftime("%H:%M") %>
-            <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
-              昨日<%= room.created_at.strftime("%H:%M") %>
-            <% else %>
-              <%= room.created_at.strftime("%Y/%m/%d") %>
-            <% end %>
-        </div>
+        <% end %>
     <% end %>
   <% end %>
 </div>
