--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -8,7 +8,7 @@
 <div class="rooms">
   <th><%= sort_link(@q, :created_at, "作成日", hide_indicator: true) %></th>
   <% @results.each do |room| %>
-    <%= link_to room_page_path(room.id), "data-turbolinks": false do %>
+    <%= link_to room_page_path(room.id), "data-turbo": false do %>
         <% if UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
             <div class="room"> 
                 <div class="room-image">
