edit back button

--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,7 +1,7 @@
 <div class="room-header-list">
   <div class="room-header">
     <div class="room_header_left">
-      <%= link_to "/room", "data-turbo": false do %><div class="room_back"><i class="fa-solid fa-angle-left"></i></div><% end %>
+      <%= link_to "/room/joined", "data-turbo": false do %><div class="room_back"><i class="fa-solid fa-angle-left"></i></div><% end %>
       <div class="room_title"><%= @room.name %></div>
     </div>
     <div class="room_header_right">
