--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,7 +1,15 @@
 <div class="modal-detail" id="js-modal-detail">
   <div class="modal-detail-inner">
+  <div class="detail-header">
     <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
-    <div class="modal-inner-content">ああああああああああああああ</div>
+    <h2>詳細情報</h2>
+  </div>
+    <div class="detail-body">
+      <div class="modal-inner-content">カテゴリ</div>
+      <div class="modal-inner-content">ルーム名</div>
+      <div class="modal-inner-content">ルーム詳細情報</div>
+      <div class="modal-inner-content">メンバー</div>
+    </div>
   </div>
   <div class="background-shadow" id="js-black-sh"></div>
 </div>
