--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -355,15 +355,28 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-  width: 80%;
-  max-width: 600px;
-  padding: 50px;
-  background-color: #fff;
+  width: 40%;
+  height: 70%;
+  padding: 10px;
+  background-color: rgb(203, 188, 246);
+  border-radius: 10px;
   z-index: 2;
 }
-.modal-inner-content{
-  font-size: 25px;
+
+.detail-header{
+  padding: 12px;
+  background-color: rgb(151, 139, 185);
+  font-size: 1.25rem;
+  border-radius:10px 10px 0px 0px;
 }
+
+.modal-inner-content{
+  font-size: 1.25rem;
+  width: 100%;
+  height: 30px;
+  background-color: rgb(255, 255, 255);
+}
+
 .close-btn {
   position: absolute;
   right: 0;
