--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -358,23 +358,37 @@
   width: 40%;
   height: 70%;
   padding: 10px;
-  background-color: rgb(203, 188, 246);
+  background-color: #fff;
   border-radius: 10px;
   z-index: 2;
+  .detail-body{
+    height: calc(92% - 24px);
+    background-color: #fff;
+  }
 }
 
 .detail-header{
-  padding: 12px;
-  background-color: rgb(151, 139, 185);
-  font-size: 1.25rem;
-  border-radius:10px 10px 0px 0px;
+  padding: 4px;
+  height: 8%;
+  background-color: #fff;
+  font-size: 1.50rem;
+  font-weight: bolder; 
 }
 
 .modal-inner-content{
-  font-size: 1.25rem;
-  width: 100%;
-  height: 30px;
-  background-color: rgb(255, 255, 255);
+  padding: 10px 5px;
+  .title{
+    font-size: 17px;
+    color:#222222;
+  }
+  .contents{
+    font-size: 14px;
+    color: #626262;
+  }
+  &:hover{
+    background-color: #F4F4F4;
+    transition: 0.6s;
+  }
 }
 
 .close-btn {
