user-status function

--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -180,6 +180,14 @@
     background-color: #f4f4f4;
     transition: 0.5s;
   }
+  .activity-status{
+    color: #e0e0e0;
+    font-size: 25px;
+    &.online{
+      font-size: 25px;
+      color: #64dd18;
+    }
+  }
 }
 
 .room_button{
